# interpstaticlang

./: .gitmodules  CMakeLists.txt  README.md
examples/: main.txt  nomain.txt  sandbox.txt
islc/: CMakeLists.txt
islc/src/: islc.cpp
islc/src/core/: application.cpp  application.h
islc/src/islc/core/: application.cpp  application.h  base.h
islc/src/islc/debug/: cfggraphwiz.cpp  cfggraphwiz.h  nodegraphwiz.cpp  nodegraphwiz.h  nodetree.cpp  nodetree.h  stringlisttext.cpp  stringlisttext.h
islc/src/islc/generator/: generator.cpp  generator.h
islc/src/islc/ir/: cfgbasicblock.h  cfginstruction.cpp  cfginstruction.h  controlflowgraph.cpp  controlflowgraph.h  stringlist.cpp  stringlist.h
islc/src/islc/lexer/: lexer.lpp
islc/src/islc/parser/: bisoncontext.cpp  node.cpp  node.h  nodestore.cpp  nodestore.h  parsecommand.cpp  parsecommand.h  parser.ypp
islc/src/islc/simulation/: astsimulation.cpp  astsimulation.h  cfgsimulation.cpp  cfgsimulation.h
islc/src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
islc/src/parser/: node.h  nodestore.h  parser.ypp
